--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
   <![endif]-->
 </head>
 <body class="page">
-  //= template/sprite.symbol.html
+  <!-- Inline SVG DOM -->
+  <!-- //= template/sprite.symbol.html -->
   <div class="main-header">
     <nav class="main-menu">
       <input class="main-menu__toggle-checkbox" type="checkbox" id="toggle-menu-checkbox" name="toggle-menu-checkbox">
@@ -60,13 +61,17 @@
       <p class="intro__text">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
     </section>
     <div class="single-promo single-promo--left">
-      <div class="single-promo__title">
-        Настоящий городок
-      </div>
-      <div class="single-promo__number">&ndash;№1&ndash;</div>
-      <p class="single-promo__description">Седона не атракцион для туристов, там течет своя жизнь</p>
-      <div class="single-promo__image">
-        <img src="pic/photo-city@1x.jpg" width="800" height="400" srcset="pic/photo-city@2x.jpg 2x" alt="photo-city">
+      <div class="grid">
+        <div class="grid__medium-col-1-3">
+          <div class="single-promo__title">Настоящий городок</div>
+          <div class="single-promo__number">&ndash;№1&ndash;</div>
+          <p class="single-promo__description">Седона не атракцион для туристов, там течет своя жизнь</p>
+        </div>
+        <div class="grid__medium-col-2-3">
+          <div class="single-promo__image">
+            <img src="pic/photo-city@1x.jpg" width="800" height="400" srcset="pic/photo-city@2x.jpg 2x" alt="photo-city">
+          </div>
+        </div>
       </div>
     </div>
     <section class="features-list">
@@ -99,14 +104,17 @@
       </div>
     </section>
     <div class="single-promo single-promo--right"> 
-      <div class="single-promo__title">
-        Там есть Мост<br> 
-        Дьявола
-      </div>
-      <div class="single-promo__number">&ndash;№2&ndash;</div>
-      <p class="single-promo__description">Да, по нему можно пройти! Если, конечно, вы осмелитесь</p>
-      <div class="single-promo__image">
-        <img src="pic/photo-bridge@1x.jpg" width="800" height="400" srcset="pic/photo-bridge@2x.jpg 2x" alt="photo-bridge">
+      <div class="grid">
+        <div class="grid__medium-col-1-3 grid__medium-right-move-2-3">
+          <div class="single-promo__title">Там есть Мост Дьявола</div>
+          <div class="single-promo__number">&ndash;№2&ndash;</div>
+          <p class="single-promo__description">Да, по нему можно пройти! Если, конечно, вы осмелитесь</p>
+        </div>
+        <div class="grid__medium-col-2-3 grid__medium-left-move-1-3">
+          <div class="single-promo__image">
+            <img src="pic/photo-bridge@1x.jpg" width="800" height="400" srcset="pic/photo-bridge@2x.jpg 2x" alt="photo-bridge">
+          </div>
+        </div>
       </div>
     </div>
     <div class="promo-list">
@@ -186,39 +194,49 @@
   <div class="map-footer">
     <div class="map-footer__wrapper" id="map" style="height: 100%;"></div>
     <div class="main-footer">
-      <section class="main-footer__hashtag"><a class="main-footer__hashtag-link" href="#">#Visitsedona</a></section>
-      <section class="main-footer__social-links">
-        <ul class="social-links-list">
-          <li class="social-links-list__item"><a class="social-links-list__link" href="#">twitter
-          <svg><use xlink:href="#icon-twitter"/></svg>
-          </a></li>
-          <li class="social-links-list__item"><a class="social-links-list__link" href="#">facebook
-          <svg><use xlink:href="#icon-facebook"/></svg>
-          </a></li>
-          <li class="social-links-list__item"><a class="social-links-list__link" href="#">youtube
-          <svg><use xlink:href="#icon-youtube"/></svg>
-          </a></li>
-        </ul>
-      </section>
-      <section class="copyright main-footer__copyright">
-        <div class="copyright__item">
-          <span class="copyright__description">Website by</span>
-          <a class="copyright__link" href="#">
-          logo-by
-          <svg><use xlink:href="#logo-glukhanko"/></svg>
-          </a>
+      <div class="grid">
+        <div class="grid__medium-col-1-3">
+          <section class="main-footer__hashtag">
+            <a class="main-footer__hashtag-link" href="#">#Visitsedona</a>
+          </section>
         </div>
-        <div class="copyright__item">
-          <span class="copyright__description">for</span>
-          <a class="copyright__link" href="#">
-          logo-htmlacademy
-          <svg><use xlink:href="#logo-htmlacademy"/></svg>
-          </a>
+        <div class="grid__medium-col-1-3">
+          <section class="main-footer__social-links">
+            <ul class="social-links-list">
+              <li class="social-links-list__item"><a class="social-links-list__link" href="#">twitter
+              <svg><use xlink:href="#icon-twitter"/></svg>
+              </a></li>
+              <li class="social-links-list__item"><a class="social-links-list__link" href="#">facebook
+              <svg><use xlink:href="#icon-facebook"/></svg>
+              </a></li>
+              <li class="social-links-list__item"><a class="social-links-list__link" href="#">youtube
+              <svg><use xlink:href="#icon-youtube"/></svg>
+              </a></li>
+            </ul>
+          </section>
         </div>
-      </section>
+        <div class="grid__medium-col-1-3">
+          <section class="copyright main-footer__copyright">
+            <div class="copyright__item">
+              <span class="copyright__description main-footer__description">Website by</span>
+              <a class="copyright__link" href="#">
+              logo-by
+              <svg><use xlink:href="#logo-glukhanko"/></svg>
+              </a>
+            </div>
+            <div class="copyright__item">
+              <span class="copyright__description main-footer__description">for</span>
+              <a class="copyright__link" href="#">
+              logo-htmlacademy
+              <svg><use xlink:href="#logo-htmlacademy"/></svg>
+              </a>
+            </div>
+          </section>
+        </div>
+      </div>
     </div>
   </div>
-  <script src="js/main.js"></script>
+  <script src="js/main.js" async defer></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWeVSJiye5lnIjiItOdq7tkSWcEPaLFBY&callback=initMap"
     async defer>
   </script>
