Inlined svg sprite into DOM

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 </head>
 <body class="page">
   <!-- Inline SVG DOM -->
-  <!-- //= template/sprite.symbol.html -->
+  //= template/sprite.symbol.html
   <div class="main-header">
     <nav class="main-menu">
       <input class="main-menu__toggle-checkbox" type="checkbox" id="toggle-menu-checkbox" name="toggle-menu-checkbox">
