--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
         <li class="main-menu__list-item"><a class="main-menu__list-link main-menu__list-link--disabled" href="#">Информация</a></li>
         <li class="main-menu__list-item"><a class="main-menu__list-link main-menu__list-link--disabled" href="#">Фото и Видео</a></li>
         <li class="main-menu__list-item"><a class="main-menu__list-link main-menu__list-link--disabled" href="#">Карта штата</a></li>
-        <li class="main-menu__list-item"><a class="main-menu__list-link" href="#">Гостиницы</a></li>
+        <li class="main-menu__list-item"><a class="main-menu__list-link" href="hotels.html">Гостиницы</a></li>
         <li class="main-menu__list-item">
           <a class="logo main-menu__list-link main-menu__list-link--logo" href="index.html">
             <img src="img/logo-sedona@1x.png" srcset="img/logo-sedona@2x.png 2x, img/logo-sedona@3x.png 3x" width="67" height="56" alt="logo-sedona">
@@ -158,14 +158,14 @@
         <form class="search-hotel-popup__form" id="search-hotel-popup__form" action="/search" method="post">
           <fieldset class="search-hotel-popup__fieldset">
             <label class="search-hotel-popup__label" for="date-in">Дата заезда:</label>
-            <input class="search-hotel-popup__input search-hotel-popup__input--date" type="date" name="date-in" id="date-in" value="2014-04-24">
+            <input class="search-hotel-popup__input search-hotel-popup__input--date" type="date" name="date-in" id="date-in" value="2016-04-24">
             <span class="search-hotel-popup__icon-calendar">
               <svg><use xlink:href="#icon-calendar"/></svg>
             </span>
           </fieldset>
           <fieldset class="search-hotel-popup__fieldset">
             <label class="search-hotel-popup__label" for="date-out">Дата выезда:</label>
-            <input class="search-hotel-popup__input search-hotel-popup__input--date" type="date" name="date-out" id="date-out" value="2014-07-04">
+            <input class="search-hotel-popup__input search-hotel-popup__input--date" type="date" name="date-out" id="date-out" value="2016-07-04">
             <span class="search-hotel-popup__icon-calendar">
               <svg><use xlink:href="#icon-calendar"/></svg>
             </span>
@@ -209,7 +209,7 @@
   </div>
   <div class="map-footer">
     <div class="map-footer__wrapper" id="map" style="height: 100%;"></div>
-    <div class="main-footer">
+    <div class="main-footer map-footer__main-footer">
       <div class="grid">
         <div class="grid__medium-col-1-3">
           <section class="main-footer__hashtag">
