--- a/src/hotels.html
+++ b/src/hotels.html
@@ -15,6 +15,16 @@
   <![endif]-->
 </head>
 <body class="page">
+  <div class="preloader">
+    <div class="preloader__wrapper">
+      <div class="preloader__thecube">
+        <div class="preloader__child-cube preloader__child-cube--c1"></div>
+        <div class="preloader__child-cube preloader__child-cube--c2"></div>
+        <div class="preloader__child-cube preloader__child-cube--c4"></div>
+        <div class="preloader__child-cube preloader__child-cube--c3"></div>
+      </div>
+    </div>
+  </div>
   <!-- Inline SVG DOM -->
   //= template/sprite.symbol.html
   <div class="main-header">
@@ -317,6 +327,9 @@
     </div>
   </div>
   <script src="js/main.js"></script>
+  <script>
+    $('.preloader').fadeOut();
+  </script>
 </body>
 </html>
 
